fix: don't work token
