# app/Http/Controllers/CommentControllers/IndexController.php
@@ -15,16 +15,7 @@ class IndexController extends BaseCommentController
      *      tags={"Projects"},
      *      summary="Index",
      *      description="Get a comment.",
-     *      @OA\Parameter(
-     *          name="Authorization",
-     *          description="Authorization token",
-     *          required=true,
-     *          in="header",
-     *          @OA\Schema(
-     *              type="string",
-     *              example="Bearer 67pIVg4vAbmRZewXK4H0llU4XQtSy3VIxTpofgUOFfpcTfXfK1U0tSM3YNhytEw7BA7KzePrRJoQs3KlQSpzCer10lObTrep8wuZ"
-     *          )
-     *      ),
+     *      security={{"Authorization":{}}},
      *      @OA\Parameter(
      *          name="comment_id",
      *          description="comment id",
